@@ -12,6 +12,9 @@
          *) applies to 0.9.6a/0.9.6b/0.9.6c and 0.9.7
          +) applies to 0.9.7 only
 
+  *) Only add signing time to PKCS7 structures if it is not already present.
+     [Steve Henson]
+
   *) Fix crypto/objects/objects.h: "ld-ce" should be "id-ce",
      OBJ_ld_ce should be OBJ_id_ce.
      Also some ip-pda OIDs in crypto/objects/objects.txt were
